# usermgmt-interview

./: .coverage  .gitignore  Dockerfile  README.md  Taskfile.yaml  cov.info  devbox.json  pyproject.toml
auth/: config.py  main.py  setup_db.py
auth/models/: user.py
auth/routes/: auth.py
manifests/: deployment.yaml
tests/: test_auth.py
