[tool.poetry]
name = "auth"
version = "0.1.0"
description = ""
authors = ["Pantheon User Management Squad <usermgmt@pantheon.io>"]
readme = "README.md"

[tool.poetry.scripts]
setup_db = "auth.setup_db:setup_database"

[tool.poetry.dependencies]
python = "3.12.3"
quart = "^0.19.6"
sqlalchemy = "^2.0.32"
pydantic = "^2.8.2"
pyjwt = "^2.9.0"


[tool.poetry.group.dev.dependencies]
pyright = "^1.1.377"
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
black = "^24.8.0"
pylint = "^3.2.6"
pytest-asyncio = "^0.24.0"
ruff = "^0.6.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=auth --cov-report term-missing --cov-fail-under=70"
